--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="X-UA-Compatible">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,76 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="full">Hello world</h1>
+<header>
+    <p>
+        <span style="color:blue">Web</span>Studio
+    </p>
+    <nav>
+    <ul>
+        <li>
+            <a href="">Студія</a>
+        </li>
+        <li>
+            <a href="">Портфоліо</a>
+        </li>
+        <li>
+            <a href="">Контакти</a>
+        </li>
+    </ul>
+    </nav>
+    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+</header>
+<main>
+    <section>
+    <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+    <button type="button">Замовити послугу</button>
+    </section>
+    <section>
+        <ul>
+            <li>
+                УВАГА ДО ДЕТАЛЕЙ    
+            </li>
+            <li>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</li>
+        </ul>
+        <ul>
+            <li>
+                ПУНКТУАЛЬНІСТЬ    
+            </li>
+            <li>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</li>
+        </ul>
+        <ul>
+            <li>
+                ПЛАНУВАННЯ    
+            </li>
+            <li>Так само консультація з широким активом значною мірою зумовлює.</li>
+        </ul>
+        <ul>
+            <li>
+                СУЧАСНІ ТЕХНОЛОГІЇ    
+            </li>
+            <li>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</li>
+        </ul>
+    </section>
+  <section>
+    <h2>Чим ми займаємося</h2>
+
+  </section>
+  <section>
+    <h2>Наша команда</h2>
+  </section>
+</main>
+<footer>
+    <p>
+        <span style="color:blue">Web</span>Studio
+    </p> 
+    <address>
+        <ul>
+        <li>м. Київ, пр-т Лесі Українки, 26</li> 
+        <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+    </ul>
+      </address>
+</footer>
 </body>
 </html>
