--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </p> 
     <address>
         <ul>
-        <li>м. Київ, пр-т Лесі Українки, 26</li> 
+        <li><a href=""></a>м. Київ, пр-т Лесі Українки, 26</li> 
         <li><a href="info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
     </ul>
