Cange index.html

--- a/index.html
+++ b/index.html
@@ -1,82 +1,106 @@
 <!DOCTYPE html>
 <html lang="X-UA-Compatible">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-<header>
-    <p>
-        <span style="color:blue">Web</span>Studio
-    </p>
-    <nav>
-    <ul>
-        <li>
+  </head>
+  <body>
+    <header>
+      <p><span style="color: blue">Web</span>Studio</p>
+      <nav>
+        <ul>
+          <li>
             <a href="">Студія</a>
-        </li>
-        <li>
+          </li>
+          <li>
             <a href="">Портфоліо</a>
-        </li>
-        <li>
+          </li>
+          <li>
             <a href="">Контакти</a>
-        </li>
-    </ul>
-    </nav>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
-</header>
-<main>
-    <section>
-    <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
-    <button type="button">Замовити послугу</button>
-    </section>
-    <section>
+          </li>
+        </ul>
+      </nav>
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+    </header>
+    <main>
+      <section>
+        <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
         <ul>
-            <li>
-                УВАГА ДО ДЕТАЛЕЙ    
-            </li>
-            <li>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</li>
+          <li>УВАГА ДО ДЕТАЛЕЙ</li>
+          <li>
+            Ідейні міркування, і навіть початок повсякденної роботи з формування
+            позиції.
+          </li>
         </ul>
         <ul>
-            <li>
-                ПУНКТУАЛЬНІСТЬ    
-            </li>
-            <li>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</li>
+          <li>ПУНКТУАЛЬНІСТЬ</li>
+          <li>
+            Завдання організації, особливо рамки і місце навчання кадрів тягне у
+            себе.
+          </li>
         </ul>
         <ul>
-            <li>
-                ПЛАНУВАННЯ    
-            </li>
-            <li>Так само консультація з широким активом значною мірою зумовлює.</li>
+          <li>ПЛАНУВАННЯ</li>
+          <li>
+            Так само консультація з широким активом значною мірою зумовлює.
+          </li>
         </ul>
         <ul>
-            <li>
-                СУЧАСНІ ТЕХНОЛОГІЇ    
-            </li>
-            <li>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</li>
+          <li>СУЧАСНІ ТЕХНОЛОГІЇ</li>
+          <li>
+            Значимість цих проблем настільки очевидна, що реалізація планових
+            завдань.
+          </li>
         </ul>
-    </section>
-  <section>
-    <h2>Чим ми займаємося</h2>
-
-  </section>
-  <section>
-    <h2>Наша команда</h2>
-  </section>
-</main>
-<footer>
-    <p>
-        <span style="color:blue">Web</span>Studio
-    </p> 
-    <address>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
         <ul>
-        <li><a href=""></a>м. Київ, пр-т Лесі Українки, 26</li> 
-        <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
-    </ul>
+          <li>
+            <img
+              src="./img/job1.jpg"
+              alt="руки на клавіатурі"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/job2.jpg"
+              alt="руки на клавіатурі ноутбука"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/job3.jpg"
+              alt="планшет в руках"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+      </section>
+    </main>
+    <footer>
+      <p><span style="color: blue">Web</span>Studio</p>
+      <address>
+        <ul>
+          <li><a href=""></a>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
       </address>
-</footer>
-</body>
+    </footer>
+  </body>
 </html>
