--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
       </nav>
       <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a>
+      <a href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
       <section>
@@ -98,7 +98,7 @@
         <ul>
           <li><a href=""></a>м. Київ, пр-т Лесі Українки, 26</li>
           <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
