--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="X-UA-Compatible">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <p><span style="color: blue">Web</span>Studio</p>
+      <p><span style="color: blue">Web</span>Studio</p><a href=''index.html''>Головна сторінка</a>
       <nav>
         <ul>
           <li>
