--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <p><span style="color: blue">Web</span>Studio</p><a href=''index.html''>Головна сторінка</a>
+      <p><span style="color: blue">Web</span>Studio</p>
       <nav>
         <ul>
           <li>
@@ -31,31 +31,26 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2 hidden>Особливості</h2>
         <ul>
-          <li>УВАГА ДО ДЕТАЛЕЙ</li>
           <li>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3> 
+          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування
+            позиції.</p>
           </li>
-        </ul>
-        <ul>
-          <li>ПУНКТУАЛЬНІСТЬ</li>
           <li>
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.
+           <h3>ПУНКТУАЛЬНІСТЬ</h3>
+           <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у
+            себе.</p>
           </li>
-        </ul>
-        <ul>
-          <li>ПЛАНУВАННЯ</li>
           <li>
-            Так само консультація з широким активом значною мірою зумовлює.
+           <h3>ПЛАНУВАННЯ</h3> 
+           <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-        </ul>
-        <ul>
-          <li>СУЧАСНІ ТЕХНОЛОГІЇ</li>
           <li>
-            Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.
+           <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3> 
+           <p>Значимість цих проблем настільки очевидна, що реалізація планових
+            завдань.</p>
           </li>
         </ul>
       </section>
@@ -75,7 +70,7 @@
               src="./img/job2.jpg"
               alt="руки на клавіатурі ноутбука"
               width="370"
-              height="294"
+              height="295"
             />
           </li>
           <li>
@@ -83,20 +78,42 @@
               src="./img/job3.jpg"
               alt="планшет в руках"
               width="370"
-              height="294"
+              height="295"
             />
           </li>
         </ul>
       </section>
       <section>
         <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img src="./img/command1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+            <h3>Ігор Дем'яненко</h3>
+            <p lang="en">Product Designer</p>
+          </li>
+          <li>
+            <img src="./img/command2.jpg" alt="Ольга Рєпіна" width="270" height="260">
+            <h3>Ольга Рєпіна</h3>
+            <p lang="en">Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./img/command3.jpg" alt="Микола Тарасов" width="270" height="260">
+            <h3>Микола Тарасов</h3>
+            <p lang="en">Marketing</p>
+          </li>
+          <li>
+            <img src="./img/command4.jpg" alt="Михайло Єрмаков" width="270" height="260">
+            <h3>Михайло Єрмаков</h3>
+            <p lang="en">UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
-      <p><span style="color: blue">Web</span>Studio</p>
+      <p lang="en"><span style="color: blue">Web</span>Studio</p>
       <address>
         <ul>
-          <li><a href=""></a>м. Київ, пр-т Лесі Українки, 26</li>
+          <li><a href="https://goo.gl/maps/bMgTr6E4MJvzgFLE7" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
           <li><a href="info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
