--- a/index.html
+++ b/index.html
@@ -34,23 +34,31 @@
         <h2 hidden>Особливості</h2>
         <ul>
           <li>
-          <h3>УВАГА ДО ДЕТАЛЕЙ</h3> 
-          <p>Ідейні міркування, і навіть початок повсякденної роботи з формування
-            позиції.</p>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
           </li>
           <li>
-           <h3>ПУНКТУАЛЬНІСТЬ</h3>
-           <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у
-            себе.</p>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
           </li>
           <li>
-           <h3>ПЛАНУВАННЯ</h3> 
-           <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
-           <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3> 
-           <p>Значимість цих проблем настільки очевидна, що реалізація планових
-            завдань.</p>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
           </li>
         </ul>
       </section>
@@ -87,22 +95,42 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./img/command1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
+            <img
+              src="./img/command1.jpg"
+              alt="Ігор Дем'яненко"
+              width="270"
+              height="260"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="./img/command2.jpg" alt="Ольга Рєпіна" width="270" height="260">
+            <img
+              src="./img/command2.jpg"
+              alt="Ольга Рєпіна"
+              width="270"
+              height="260"
+            />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="./img/command3.jpg" alt="Микола Тарасов" width="270" height="260">
+            <img
+              src="./img/command3.jpg"
+              alt="Микола Тарасов"
+              width="270"
+              height="260"
+            />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="./img/command4.jpg" alt="Михайло Єрмаков" width="270" height="260">
+            <img
+              src="./img/command4.jpg"
+              alt="Михайло Єрмаков"
+              width="270"
+              height="260"
+            />
             <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
@@ -113,7 +141,14 @@
       <p lang="en"><span style="color: blue">Web</span>Studio</p>
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/bMgTr6E4MJvzgFLE7" target="_blank" rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/bMgTr6E4MJvzgFLE7"
+              target="_blank"
+              rel="noopener noreferrer"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li><a href="info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
