--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <p><span style="color: blue">Web</span>Studio</p>
       <nav>
+        <a href="">WebStudio</a>
         <ul>
           <li>
             <a href="">Студія</a>
@@ -22,9 +22,11 @@
           </li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </header>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+      </header>
     <main>
       <section>
         <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
@@ -70,7 +72,7 @@
               src="./img/job1.jpg"
               alt="руки на клавіатурі"
               width="370"
-              height="294"
+              height="295"
             />
           </li>
           <li>
@@ -138,7 +140,7 @@
       </section>
     </main>
     <footer>
-      <p lang="en"><span style="color: blue">Web</span>Studio</p>
+      <a href="">Web Studio</a>
       <address>
         <ul>
           <li>
